Require Xcode 16.1 for React Native pods

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,25 +45,6 @@ if File.exist?(react_native_pods)
 
   prepare_react_native_project!
 
-  # React Native enforces a minimum Xcode version (16.1) in its CocoaPods utils.
-  # CI currently uses Xcode 15.4, which is capable of producing the required Pods,
-  # so we override the check to allow installs to proceed while still emitting a
-  # warning for visibility.
-  if xcodebuild_supported && xcodebuild_version && xcodebuild_version < recommended_xcode_version
-    ReactNativePodsUtils.singleton_class.class_eval do
-      def check_minimum_required_xcode(**_args)
-        Pod::UI.warn 'Skipping React Native minimum Xcode version enforcement; proceeding with xcodebuild ' \
-          "#{`xcodebuild -version`.lines.first&.strip || 'unknown version'}."
-      end
-    end
-
-    Helpers::Constants.singleton_class.class_eval do
-      def min_xcode_version_supported
-        '15.4'
-      end
-    end
-  end
-
   target 'JunoNative' do
     use_expo_modules! if defined?(use_expo_modules!)
 
@@ -77,8 +58,9 @@ if File.exist?(react_native_pods)
     end
 
     if xcodebuild_supported
-      if xcodebuild_version < recommended_xcode_version
-        Pod::UI.puts "xcodebuild version #{xcodebuild_version} is below the recommended #{recommended_xcode_version}; continuing with React Native pod configuration."
+      if xcodebuild_version && xcodebuild_version < recommended_xcode_version
+        Pod::UI.puts "xcodebuild version #{xcodebuild_version} is below the recommended #{recommended_xcode_version}; upgrade Xcode to continue."
+        raise Pod::Informative, "React Native requires Xcode >= #{recommended_xcode_version}. Found #{xcodebuild_version}."
       end
 
       use_react_native!(
