--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -4,11 +4,16 @@ on: [push, pull_request]
 
 jobs:
   ios:
-    runs-on: macos-14
+    runs-on: macos-15
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Select Xcode 16.1
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.1'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
