--- a/Juno-Native/package.json
+++ b/Juno-Native/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/cli-platform-ios": "^20.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "24.10.0",
