--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,86 +2,16 @@ name: Release QA Build and Deploy
 
 on:
   workflow_run:
-    workflows: ["CI"] # A new, single workflow that runs all builds
-    types: [completed]
-  workflow_dispatch:
+    workflows:
+      - Android Build
+      - iOS Build
+      - DSP Tests
+    types:
+      - completed
 
 jobs:
-  ios_release:
-    runs-on: macos-15
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Select Xcode 16.1
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '16.1'
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "3.2"
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install JS deps and Fastlane
-        run: |
-          npm ci --prefix Juno-Native
-          gem install fastlane
-
-      - name: Compile TurboModules
-        run: bash scripts/compile-turbo-modules.sh
-
-      # Optional version bump script; ensure scripts/bumpVersion.js exists if you keep this.
-      - name: Bump version (optional)
-        run: |
-          if [ -f scripts/bumpVersion.js ]; then
-            node scripts/bumpVersion.js
-          else
-            echo "scripts/bumpVersion.js missing, skipping version bump"
-          fi
-
-      - name: Prepare App Store Connect API key
-        shell: bash
-        env:
-          APPLE_API_KEY_JSON: ${{ secrets.APPLE_API_KEY_JSON }}
-        run: |
-          set -euo pipefail
-          umask 177
-          cat > ./asc_key.json << EOF
-          ${APPLE_API_KEY_JSON}
-          EOF
-          test -s ./asc_key.json
-
-      - name: iOS Fastlane release
-        env:
-          APP_STORE_CONNECT_API_KEY_PATH: ./asc_key.json
-          FASTLANE_SKIP_UPDATE_CHECK: true
-        run: |
-          fastlane ios release
-          rm -f ./asc_key.json
-
-      - name: Upload TurboModule artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: turbomodules-generated-ios
-          path: fastlane/build/codegen/**
-          if-no-files-found: error
-
-      - name: Upload iOS IPA artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-app-store-binary
-          path: fastlane/build/ios/*.ipa
-          if-no-files-found: error
-  
-  android_release:
-    needs: ios_release
+  release:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -91,43 +21,30 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.2"
+          ruby-version: '3.2'
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: "17"
+      - name: Install JS dependencies
+        run: npm ci
 
-      - name: Install JS deps and Fastlane
-        run: |
-          npm ci --prefix Juno-Native
-          gem install fastlane
+      - name: Install Fastlane
+        run: gem install fastlane
 
-      - name: Compile TurboModules
+      - name: Compile TurboModules (codegen)
         run: bash scripts/compile-turbo-modules.sh
 
-      - name: Android Fastlane release
+      - name: iOS Release (Fastlane)
+        run: bundle exec fastlane ios release
+        env:
+          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+          APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
+          APP_STORE_CONNECT_API_KEY: ${{ secrets.APPLE_KEY }}
+
+      - name: Android Release (Fastlane)
+        run: bundle exec fastlane android release
         env:
           SUPPLY_JSON_KEY_DATA: ${{ secrets.GOOGLE_PLAY_JSON }}
-          FASTLANE_SKIP_UPDATE_CHECK: true
-        run: fastlane android release
-
-      - name: Upload Android App Bundle
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-play-bundle
-          path: fastlane/build/android/*.aab
-          if-no-files-found: error
-
-      - name: Upload TurboModule artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: turbomodules-generated-android
-          path: fastlane/build/codegen/**
-          if-no-files-found: error
