--- a/package.json
+++ b/package.json
@@ -8,14 +8,38 @@
     "npm": ">=11.4.2"
   },
   "scripts": {
-    "test": "npm --prefix Juno-Native test",
-    "validate:packages": "node scripts/validate-package-json.js",
+    "start": "react-native start",
     "ios": "react-native run-ios",
-    "start": "react-native start"
+    "android": "react-native run-android",
+    "validate:packages": "node scripts/validate-package-json.js",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/slider": "^4.5.0",
     "react": "18.2.0",
-    "react-native": "0.76.0"
+    "react-native": "0.76.0",
+    "expo-document-picker": "^14.0.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.26.2",
+    "@babel/runtime": "^7.26.0",
+    "@react-native/eslint-config": "^0.76.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.7",
+    "@types/react-native": "^0.73.0",
+    "@types/react-test-renderer": "^18.0.7",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-ft-flow": "^2.0.3",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.5.4"
   }
 }
