Ensure workflows use repo root

--- a/.github/workflows/dsp_matrix.yml
+++ b/.github/workflows/dsp_matrix.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   bench:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .
     strategy:
       matrix:
         sr: [44100, 48000, 96000]
