--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   ios:
     runs-on: macos-14
+    defaults:
+      run:
+        working-directory: .
 
     steps:
       - name: Checkout
