--- a/.github/workflows/midi_latency.yml
+++ b/.github/workflows/midi_latency.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   latency:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .
 
     steps:
       - name: Checkout
