--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -18,13 +18,16 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
 
       - name: Install JS dependencies
         run: npm ci
