--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,10 +8,12 @@ on:
       - DSP Tests
     types:
       - completed
+    branches:
+      - main
 
 jobs:
   release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -29,7 +31,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
       - name: Install JS dependencies
         run: npm ci
@@ -41,13 +43,13 @@ jobs:
         run: bash scripts/compile-turbo-modules.sh
 
       - name: iOS Release (Fastlane)
-        run: bundle exec fastlane ios release
+        run: fastlane ios release
         env:
           APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
           APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
           APP_STORE_CONNECT_API_KEY: ${{ secrets.APPLE_KEY }}
 
       - name: Android Release (Fastlane)
-        run: bundle exec fastlane android release
+        run: fastlane android release
         env:
           SUPPLY_JSON_KEY_DATA: ${{ secrets.GOOGLE_PLAY_JSON }}
