--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo-document-picker": "^14.0.8"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^14.0.0",
+    "@react-native-community/cli-platform-ios": "^14.0.0",
     "@babel/core": "^7.26.0",
     "@babel/eslint-parser": "^7.26.2",
     "@babel/runtime": "^7.26.0",
