--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -29,6 +29,11 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
 
+      - name: Install Android SDK components
+        run: |
+          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+          yes | sdkmanager --licenses
+
       - name: Install JS dependencies
         run: npm ci
 
