--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup CMake
-        uses: lukka/get-cmake@v3
+        uses: jwlawson/actions-setup-cmake@v1
+        with:
+          cmake-version: '3.26.4'
 
       - name: Configure CMake
         run: cmake -S . -B build
