--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo-document-picker": "^14.0.8",
     "react": "18.2.0",
-    "react-native": "0.76.0",
-    "expo-document-picker": "^14.0.8"
+    "react-native": "0.76.0"
   },
   "devDependencies": {
-    "@react-native-community/cli": "^14.0.0",
-    "@react-native-community/cli-platform-ios": "^14.0.0",
     "@babel/core": "^7.26.0",
     "@babel/eslint-parser": "^7.26.2",
     "@babel/runtime": "^7.26.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@react-native-community/cli": "^14.0.0",
+    "@react-native-community/cli-platform-ios": "^14.0.0",
     "@react-native/eslint-config": "^0.76.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.7",
@@ -32,8 +33,8 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
-    "eslint-plugin-ft-flow": "^2.0.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-ft-flow": "^2.0.3",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
