--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -49,12 +49,16 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p artifact
-          found=$(find "$DERIVED_DATA/Build/Products" \( -name 'libJunoNative.a' -o -name 'libPods-JunoNative.a' \) -print -quit || true)
+          found=$(find "$DERIVED_DATA/Build/Products" \( -name 'libJunoNative.a' -o -name 'libPods-JunoNative.a' \) -print -quit)
 
           if [ -z "$found" ]; then
             echo "Neither libJunoNative.a nor libPods-JunoNative.a found under $DERIVED_DATA/Build/Products"
             echo "Contents of $DERIVED_DATA/Build/Products (if any):"
-            ls -R "$DERIVED_DATA/Build/Products" || echo "No Build/Products directory"
+            if [ -d "$DERIVED_DATA/Build/Products" ]; then
+              find "$DERIVED_DATA/Build/Products" -maxdepth 3 -print | head -n 200
+            else
+              echo "No Build/Products directory"
+            fi
             exit 1
           fi
 
