--- a/ios/exportOptions.plist
+++ b/ios/exportOptions.plist
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" 
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
 "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
   <key>method</key>
   <string>app-store</string>
   <key>uploadBitcode</key>
-  <true/>
+  <false/>
   <key>uploadSymbols</key>
   <true/>
   <key>compileBitcode</key>
-  <true/>
+  <false/>
   <key>signingStyle</key>
   <string>automatic</string>
   <key>stripSwiftSymbols</key>
   <true/>
+  <key>destination</key>
+  <string>export</string>
 </dict>
 </plist>
