--- a/.github/workflows/ios_ci_release.yml
+++ b/.github/workflows/ios_ci_release.yml
@@ -52,6 +52,11 @@ jobs:
         run: bundle exec pod install
         working-directory: ios
 
+      - name: 🔐 Setup signing with Fastlane Match
+        run: bundle exec fastlane match appstore --readonly
+        env:
+          MATCH_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
+
       - name: 🛠️ Build iOS archive
         run: |
           xcodebuild archive \
@@ -69,16 +74,35 @@ jobs:
             -exportPath $RUNNER_TEMP/output \
             -exportOptionsPlist ios/exportOptions.plist
 
+      - name: 🚀 Upload to TestFlight
+        uses: apple-actions/upload-testflight-build@v1
+        with:
+          app-path: ${{ runner.temp }}/output/JunoNative.ipa
+          issuer-id: ${{ secrets.APPLE_ISSUER_ID }}
+          api-key-id: ${{ secrets.APPLE_KEY_ID }}
+          api-private-key: ${{ secrets.APPLE_KEY }}
+
+      - name: 📦 Zip dSYM
+        run: zip -r JunoNative.app.dSYM.zip "$RUNNER_TEMP/output/JunoNative.app.dSYM"
+
+      - name: ☁️ Upload dSYM to App Store
+        run: |
+          xcrun altool \
+            --upload-symbols \
+            -f JunoNative.app.dSYM.zip \
+            --type ios \
+            --apiKey ${{ secrets.APPLE_KEY_ID }} \
+            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
+
       - name: 📂 Copy compiled native artifacts
         run: |
           set -euo pipefail
           mkdir -p ios_artifacts
 
-          DERIVED_PATH="$HOME/Library/Developer/Xcode/DerivedData"
-          FOUND_LIB=$(find "$DERIVED_PATH" -name "libJunoNative.a" -print -quit)
+          FOUND_LIB=$(find "$RUNNER_TEMP/JunoNative.xcarchive" -name "libJunoNative.a" -print -quit)
 
           if [ -z "$FOUND_LIB" ]; then
-            echo "❌ libJunoNative.a not found in DerivedData"
+            echo "❌ libJunoNative.a not found in archive contents"
             exit 1
           fi
 
@@ -93,6 +117,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+          git checkout -B ios-artifacts
           git add ios_artifacts
           git commit -m "Add compiled native iOS libs for Expo testing [skip ci]" || echo "No changes to commit"
-          git push
+          git push origin ios-artifacts
