Refactor iOS CI workflow for efficiency
Updated iOS CI workflow to streamline build process and remove unnecessary steps.

--- a/.github/workflows/ios_ci_release.yml
+++ b/.github/workflows/ios_ci_release.yml
@@ -13,11 +13,8 @@ jobs:
     runs-on: macos-14
 
     env:
-      MATCH_KEYCHAIN_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
-      APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-      APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-      APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
-      APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
+      # Apple account / app metadata
+      APPLE_ID: ${{ secrets.APPLE_ID }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
 
@@ -80,86 +77,20 @@ jobs:
         run: bundle exec pod install
         working-directory: ios
 
-      - name: 🔐 Setup signing with Fastlane Match
-        run: bundle exec fastlane match appstore --readonly
-        env:
-          MATCH_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
-
-      - name: 🛠️ Build iOS archive
+      - name: 🚀 Build & upload iOS app via Fastlane (ios_ci lane)
         run: |
-          ARCHIVE_PATH="$RUNNER_TEMP/JunoNative.xcarchive"
-
-          xcodebuild archive \
-            -workspace ios/JunoNative.xcworkspace \
-            -scheme JunoNative \
-            -sdk iphoneos \
-            -configuration Release \
-            -archivePath "$ARCHIVE_PATH" \
-            -allowProvisioningUpdates
-
-          echo "ARCHIVE_PATH=$ARCHIVE_PATH" >> "$GITHUB_ENV"
-
-      - name: 📦 Export .ipa (optional for later use)
-        run: |
-          ARCHIVE_PATH="${ARCHIVE_PATH:-$RUNNER_TEMP/JunoNative.xcarchive}"
-          EXPORT_DIR="$RUNNER_TEMP/output"
-
-          xcodebuild -exportArchive \
-            -archivePath "$ARCHIVE_PATH" \
-            -exportPath "$EXPORT_DIR" \
-            -exportOptionsPlist ios/exportOptions.plist
-
-          echo "EXPORT_DIR=$EXPORT_DIR" >> "$GITHUB_ENV"
-
-      - name: 🔍 Capture exported artifact paths
-        run: |
-          set -euo pipefail
-
-          EXPORT_DIR="${EXPORT_DIR:-$RUNNER_TEMP/output}"
-
-          IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 2 -type f -name "*.ipa" -print -quit)
-          if [ -n "$IPA_PATH" ]; then
-            echo "IPA_PATH=$IPA_PATH" >> "$GITHUB_ENV"
-            echo "Found IPA at $IPA_PATH"
-          else
-            echo "No IPA found in $EXPORT_DIR"
-          fi
-
-          DSYM_DIR=$(find "$EXPORT_DIR" -maxdepth 3 -type d -name "*.app.dSYM" -print -quit)
-          if [ -n "$DSYM_DIR" ]; then
-            echo "DSYM_DIR=$DSYM_DIR" >> "$GITHUB_ENV"
-            echo "Found dSYM at $DSYM_DIR"
-          else
-            echo "No dSYM found in $EXPORT_DIR"
-          fi
-
-          ARCHIVE_PATH="${ARCHIVE_PATH:-$(find "$RUNNER_TEMP" -maxdepth 2 -type d -name "*.xcarchive" -print -quit)}"
-          if [ -n "$ARCHIVE_PATH" ]; then
-            echo "ARCHIVE_PATH=$ARCHIVE_PATH" >> "$GITHUB_ENV"
-            echo "Using archive path $ARCHIVE_PATH"
-          else
-            echo "❌ Archive path not found"
-            exit 1
-          fi
-
-      - name: 🚀 Upload to TestFlight
-        run: bundle exec fastlane release
-        env:
-          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
+          bundle exec fastlane ios ios_ci
 
       - name: 📂 Copy compiled native artifacts
         run: |
           set -euo pipefail
           mkdir -p ios_artifacts
 
-          ARCHIVE_PATH="${ARCHIVE_PATH:-$(find "$RUNNER_TEMP" -maxdepth 2 -type d -name "*.xcarchive" -print -quit)}"
-
-          FOUND_LIB=$(find "$ARCHIVE_PATH" -name "libJunoNative.a" -print -quit)
+          DERIVED_PATH="$HOME/Library/Developer/Xcode/DerivedData"
+          FOUND_LIB=$(find "$DERIVED_PATH" -name "libJunoNative.a" -print -quit || true)
 
           if [ -z "$FOUND_LIB" ]; then
-            echo "❌ libJunoNative.a not found in archive contents"
+            echo "❌ libJunoNative.a not found in DerivedData"
             exit 1
           fi
 
@@ -178,12 +109,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git fetch origin ios-artifacts || true
-          if git show-ref --verify --quiet refs/remotes/origin/ios-artifacts; then
-            git checkout -B ios-artifacts origin/ios-artifacts
-          else
-            git checkout -B ios-artifacts
-          fi
-          git add ios_artifacts
+          git add ios_artifacts || true
           git commit -m "Add compiled native iOS libs for Expo testing [skip ci]" || echo "No changes to commit"
-          git push --force-with-lease origin ios-artifacts
+          git push || echo "No changes to push"
